feat : Skills Icon Section

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icon-cloud": "^4.1.7",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
